src/test/ui/borrowck/borrowck-move-out-of-overloaded-deref.nll.stderr
error[E0507]: cannot move out of an `Rc`
  --> $DIR/borrowck-move-out-of-overloaded-deref.rs:14:14
   |
LL |     let _x = *Rc::new("hi".to_string());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              cannot move out of an `Rc`
   |              help: consider removing the `*`: `Rc::new("hi".to_string())`

error[E0507]: cannot move out of data in a `&` reference
  --> $DIR/borrowck-move-out-of-overloaded-deref.rs:14:14
   |
LL |     let _x = *Rc::new("hi".to_string());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              cannot move out of data in a `&` reference
   |              cannot move

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
